[package]
name = "sqlx_mvp"
version = "0.1.0"
authors = ["Valentin Buck <ivan.v.buck@student.fh-kiel.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^0.2", features = ["macros", "full", "rt-threaded"] }
sqlx = {git="https://github.com/launchbadge/sqlx", branch="master", default-features = false, features=["runtime-tokio", "sqlite", "chrono", "json"]}
rand = "0.7"
num_cpus = "*"